--- a/05_html+cs+js/3-6/3-6-02_RegExp객체.html
+++ b/05_html+cs+js/3-6/3-6-02_RegExp객체.html
@@ -81,6 +81,17 @@
         // 핸드폰
         const hpReg = /^\d{10,11}$/
         // 이메일
+        // id@도메인
+        // hong@gmail.com
+        // 이메일(email)
+        // + 앞의 문자가 1번 이상 반복
+        /* 
+            /
+            ^[A-Za-z0-9!#%^&*_-]+
+            @[A-Za-z0-9_-]+
+            (\.[A-Za-z0-9_-]+){1,2}
+            /;
+        */
         const emailReg = /^[A-Za-z0-9!#%^&*_-]+@[A-Za-z0-9_-]+(\.[A-Za-z0-9_-]+){1,2}/;
     </script>
 </body>
