--- a/70_pf/SRT/section2.html
+++ b/70_pf/SRT/section2.html
@@ -32,8 +32,8 @@
         </div> -->
 
         <!-- 슬라이드 화살표 버튼 -->
-        <div class="arrow_left"><img src="images/arrow_left.svg" alt="왼쪽슬라이드버튼"></div>
-        <div class="arrow_right"><img src="images/arrow_right.svg" alt="오른쪽슬라이드버튼"></div>
+        <div class="arrow_left"><img src="/w0310/70_pf/srt/images/arrow_left.svg" alt="왼쪽슬라이드버튼"></div>
+        <div class="arrow_right"><img src="/w0310/70_pf/srt/images/arrow_right.svg" alt="오른쪽슬라이드버튼"></div>
 
         <!-- 캐로셀 컨텐츠 부분 -->
         <div class="tour_carousel_container active">
@@ -43,7 +43,7 @@
                         <div id="our_region">
                             <div class="tour_img">
                                 <a href="#">
-                                    <img src="images/tour_image1.png" alt="여행썸네일1">
+                                    <img src="/w0310/70_pf/srt/images/tour_image1.png" alt="여행썸네일1">
                                 </a>
                             </div>
                             <div class="tour_text">
@@ -58,7 +58,7 @@
                         <div id="tour_oneday">
                             <div class="tour_img">
                                 <a href="#">
-                                    <img src="images/tour_image2.png" alt="여행썸네일2">
+                                    <img src="/w0310/70_pf/srt/images/tour_image2.png" alt="여행썸네일2">
                                 </a>
                             </div>
                             <div class="tour_text">
@@ -73,7 +73,7 @@
                         <div id="tour_oneTwo">
                             <div class="tour_img">
                                 <a href="#">
-                                    <img src="images/tour_image3.png" alt="여행썸네일3">
+                                    <img src="/w0310/70_pf/srt/images/tour_image3.png" alt="여행썸네일3">
                                 </a>
                             </div>
                             <div class="tour_text">
@@ -88,7 +88,7 @@
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
+                                    <img src="/w0310/70_pf/srt/images/tour_image4.png" alt="여행썸네일4">
                                 </a>
                             </div>
                             <div class="tour_text">
@@ -103,7 +103,7 @@
                         <div id="tour_oneday">
                             <div class="tour_img">
                                 <a href="#">
-                                    <img src="images/tour_image2.png" alt="여행썸네일2">
+                                    <img src="/w0310/70_pf/srt/images/tour_image2.png" alt="여행썸네일2">
                                 </a>
                             </div>
                             <div class="tour_text">
@@ -118,7 +118,7 @@
                         <div id="tour_oneTwo">
                             <div class="tour_img">
                                 <a href="#">
-                                    <img src="images/tour_image3.png" alt="여행썸네일3">
+                                    <img src="/w0310/70_pf/srt/images/tour_image3.png" alt="여행썸네일3">
                                 </a>
                             </div>
                             <div class="tour_text">
@@ -133,7 +133,7 @@
                         <div id="tour_twoThree">
                             <div class="tour_img">
                                 <a href="#">
-                                    <img src="images/tour_image4.png" alt="여행썸네일4">
+                                    <img src="/w0310/70_pf/srt/images/tour_image4.png" alt="여행썸네일4">
                                 </a>
                             </div>
                             <div class="tour_text">
