--- a/70_pf/SRT/section2.html
+++ b/70_pf/SRT/section2.html
@@ -145,7 +145,7 @@
                         </div>
                     </li>
 
-                </ul>
+                </ul><!-- //.tour_carousel -->
             </div><!-- //.tour_area -->
         </div>
 
