--- a/70_pf/SRT/sub/trip_best.html
+++ b/70_pf/SRT/sub/trip_best.html
@@ -118,8 +118,8 @@
                         <div class="search_container">
                             <h2>종합검색</h2>
                             <input type="text" id="searchInput" class="search_box" placeholder="원하는 여행을 검색해보세요.">
-                            <div class="search_btn" onclick="serach()">
-                                <img src="/w0310/70_pf/srt/images/sub/search.svg" alt="검색버튼">
+                            <div class="search_btn" >
+                                <img src="/w0310/70_pf/srt/images/sub/search.svg" alt="검색버튼" onclick="search()">
                             </div>
                         </div>
 
