--- a/70_pf/tourist2/sub/join.html
+++ b/70_pf/tourist2/sub/join.html
@@ -105,7 +105,7 @@
 
                 <!-- 라디오버튼 -->
                 <li>
-                    <label for="">성별</label>
+                    <label for=""><span class="required_input">*</span>성별</label>
                     <input type="radio" name="gender" id="man">
                     <label for="man" class="gender">남</label>
                     <input type="radio" name="gender" id="woman">
@@ -114,7 +114,7 @@
 
                 <!-- 확인란(체크박스) -->
                 <li>
-                    <label for="">개인정보 활용동의</label>
+                    <label for=""><span class="required_input">*</span>개인정보 활용동의</label>
                     <input type="checkbox" id="agree">
                     <label for="argee">동의함</label>
                 </li>
@@ -122,7 +122,7 @@
                 <!-- textarea -->
                 <li>
                     <label for="inquiry_detail">문의내용</label>
-                    <textarea name="inquiry_detail" id="inquiry_detail" placeholder="간단한 상담 요청 사항을 남겨주시면 보다 상세한 상담이 가능합니다. 전화 상담 희망시 기재 부탁드립니다."></textarea>
+                    <textarea class="w100p" name="inquiry_detail" id="inquiry_detail" placeholder="간단한 상담 요청 사항을 남겨주시면 보다 상세한 상담이 가능합니다. 전화 상담 희망시 기재 부탁드립니다."></textarea>
                 </li>
             </ul>
 
