--- a/70_pf/jeep/header.html
+++ b/70_pf/jeep/header.html
@@ -15,12 +15,13 @@
             <ul class="main">
                 <li><a href="#">모델소개</a></li>
                 <li><a href="#">구입문의</a></li>
-                <li><a href="#"><img src="/w0310/70_pf/jeep/images/logo.png" alt="로고"></a></li>
+                <li><a href="#"><img src="/w0310/70_pf/jeep/images/logo_w.png" alt="로고"></a></li>
                 <li><a href="#">고객지원</a></li>
-                <li><a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave.png" alt="jeepwave"></a></li>
+                <li><a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="jeepwave"></a></li>
             </ul>
         </nav>
     </header>
+    <div class="im"></div>
 </body>
 
 </html>
