--- a/05_html+cs+js/3-7/3-7-03_이벤트객체.html
+++ b/05_html+cs+js/3-7/3-7-03_이벤트객체.html
@@ -7,6 +7,9 @@
     <title>이벤트객체</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <style>
+        body {
+            margin: 0;
+        }
         div {
             height: 100px;
             background: #718c00;
@@ -18,6 +21,7 @@
 
 <body>
     <button id="bt">클릭</button>
+    <button id="bt2">화살표 함수 클릭</button>
     <div id="area">여기에 마우스 왼쪽, 가운데, 오른쪽 버튼 클릭</div>
     <script>
         /*
@@ -37,37 +41,63 @@
             }
 
             속성
-                target
-                type
-                clientX
-                clientY
-                screenX
-                button
+                event.target
+                    이벤트를 발생시킨 객체 반환
+                event.type
+                event.clientX
+                event.clientY
+                event.screenX
+                event.button
+                    마우스 왼쪽 버튼 0
+                    마우스 가운데 버튼 1
+                    마우스 오른쪽 버튼 2
 
             메서드
-                preventDefault()
-                stopPropagation()
+                event.preventDefault();
+                    -> 기본 이벤트 방지
+                    -> prevent: 방지하다, 막다, 예방하다
+                event.stopPropagation();
+                    -> Propagation 번식, 전파
+                    -> 이벤트 전파 방지
+                    -> 이벤트 버블링? 자식->부모로 이벤트 전파
+
+
         */
 
         const bt = document.getElementById('bt');
+        const bt2 = document.getElementById('bt2');
         const area = document.getElementById('area');
 
-        bt.onclick = function(e) {
-            console.log(e.target); // <button id='bt'>클릭</button>
+        bt.onclick = function (e) {
+            console.log(this); // <button id='bt'>클릭</button>
             console.log(e.type); // click
             console.log(e.clientX); //숫자 
             console.log(e.clientY); //숫자 
             console.log(e.screenX); //숫자 
             console.log(e.screenY); //숫자 마우스를 버튼 어느 부분을 클릭하느냐에 따라 달라짐
-            
+
         }
 
-        area.onmousedown = function(e) {
+        bt2.onclick = event => {
+            console.log(this); // Window {window: window, self: window, document, document, name:
+            console.log(event.target);
+        }
+
+        area.onmousedown = function (e) {
             console.log(e.button); //0
 
         }
     </script>
+    <div>
+        <a href="http://ooongi.github.io/w0310" id="pf">포트폴리오</a>
+    </div>
+    <script>
+        const pf = document.getElementById('pf')
 
+        pf.onclick = function(){
+            alert('포트폴리오');
+        };
+    </script>
 </body>
 
 </html>
