--- a/70_pf/SRT/section2.html
+++ b/70_pf/SRT/section2.html
@@ -42,14 +42,14 @@
                     <li class="tour_carousel_contents">
                         <div id="our_region">
                             <div class="tour_img">
-                                <a href="#">
+                                <a href="https://www.tour08.co.kr/home/goods_view/index.asp?ts=goods_day&strApart=B&strBpart=2&strCpart=2&goodsNum=1230" target="_blank">
                                     <img src="/w0310/70_pf/srt/images/tour_image1.png" alt="여행썸네일1">
                                 </a>
                             </div>
                             <div class="tour_text">
                                 <p class="station_name">부산역</p>
-                                <h3 class="tour_title">부산이야기 1탄</h3>
-                                <p class="tour_won">151,000원~</p>
+                                <h3 class="tour_title">부산이야기 2탄</h3>
+                                <p class="tour_won">159,000원~</p>
                                 <p class="tour_way">&#91;여행공방&#93; 당일 &#183; 최소4인</p>
                             </div>
                         </div>
@@ -57,7 +57,7 @@
                     <li class="tour_carousel_contents">
                         <div id="tour_oneday">
                             <div class="tour_img">
-                                <a href="#">
+                                <a href="https://www.ktxtour.co.kr/goods/goods_category_view.asp?goodsCode=1|15|2011|29&SearchKeyword=%B0%EE%BC%BA" target="_blank">
                                     <img src="/w0310/70_pf/srt/images/tour_image2.png" alt="여행썸네일2">
                                 </a>
                             </div>
@@ -72,7 +72,7 @@
                     <li class="tour_carousel_contents">
                         <div id="tour_oneTwo">
                             <div class="tour_img">
-                                <a href="#">
+                                <a href="https://www.ktxtour.co.kr/goods/goods_category_view.asp?goodsCode=Z|17|2023|1&SearchKeyword=%B0%E6%C1%D6" target="_blank">
                                     <img src="/w0310/70_pf/srt/images/tour_image3.png" alt="여행썸네일3">
                                 </a>
                             </div>
@@ -87,7 +87,7 @@
                     <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
-                                <a href="#">
+                                <a href="https://www.ktxtour.co.kr/goods/goods_category_view.asp?goodsCode=1|15|2010|46&SearchKeyword=%C3%BB%BB%EA%B5%B5" target="_blank">
                                     <img src="/w0310/70_pf/srt/images/tour_image4.png" alt="여행썸네일4">
                                 </a>
                             </div>
@@ -102,7 +102,7 @@
                     <li class="tour_carousel_contents">
                         <div id="tour_oneday">
                             <div class="tour_img">
-                                <a href="#">
+                                <a href="https://www.ktxtour.co.kr/goods/goods_category_view.asp?goodsCode=1|15|2011|29&SearchKeyword=%B0%EE%BC%BA" target="_blank">
                                     <img src="/w0310/70_pf/srt/images/tour_image2.png" alt="여행썸네일2">
                                 </a>
                             </div>
@@ -117,7 +117,7 @@
                     <li class="tour_carousel_contents">
                         <div id="tour_oneTwo">
                             <div class="tour_img">
-                                <a href="#">
+                                <a href="https://www.ktxtour.co.kr/goods/goods_category_view.asp?goodsCode=Z|17|2023|1&SearchKeyword=%B0%E6%C1%D6" target="_blank">
                                     <img src="/w0310/70_pf/srt/images/tour_image3.png" alt="여행썸네일3">
                                 </a>
                             </div>
@@ -132,7 +132,7 @@
                     <li class="tour_carousel_contents">
                         <div id="tour_twoThree">
                             <div class="tour_img">
-                                <a href="#">
+                                <a href="https://www.ktxtour.co.kr/goods/goods_category_view.asp?goodsCode=1|15|2010|46&SearchKeyword=%C3%BB%BB%EA%B5%B5" target="_blank">
                                     <img src="/w0310/70_pf/srt/images/tour_image4.png" alt="여행썸네일4">
                                 </a>
                             </div>
