--- a/70_pf/tourist2/sub/join.html
+++ b/70_pf/tourist2/sub/join.html
@@ -9,6 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.min.js"></script>
     <script src="/w0310/70_pf/tourist2/js/slider.js"></script>
     <script src="/w0310/70_pf/tourist2/js/nav.js"></script>
+    <script src="/w0310/70_pf/tourist2/js/join.js"></script>
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="/w0310/70_pf/tourist2/js/addr.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.17/jquery.bxslider.css">
     <link rel="stylesheet" href="/w0310/70_pf/tourist2/css/join.css">
 </head>
@@ -23,7 +26,8 @@
             </div>
             <div class="nav_outer_box">
                 <h1 class="logo">
-                    <a href="/w0310/70_pf/tourist2/index.html"><img src="https://picsum.photos/id/400/270/40" alt="로고"></a>
+                    <a href="/w0310/70_pf/tourist2/index.html"><img src="https://picsum.photos/id/400/270/40"
+                            alt="로고"></a>
                 </h1>
                 <nav class="gnb">
                     <div class="nav_bg"></div>
@@ -70,42 +74,67 @@
     <!-- 섹션2 -->
     <div id="join">
         <p class="required_input">* 필수입력으로 반드시 입력하셔야 합니다.</p>
-        <form action="" method="post" class="join_form">
+        <form action="" method="post" class="join_form" onsubmit="return submitForm()">
             <ul>
+                <!-- 이메일 -->
                 <li>
-                    <label for=""><span class="required_input">*</span>이메일</label>
-                    <input type="text">@<input type="text" required>
-                    <select name="" id="">
-                        <option value="">직접입력</option>
-                        <option value="naver">naver.com</option>
-                        <option value="google">google.com</option>
-                    </select>
+                    <div class="email-box">
+                        <label for=""><span class="required_input">*</span>이메일</label>
+                        <input type="text" id="email-id" placeholder="아이디" />
+                        <span>@</span>
+                        <input type="text" id="email-domain" placeholder="도메인" />
+                        <select id="domain-select" onchange="selectDomain(this)">
+                            <option value="">직접입력</option>
+                            <option value="gmail.com">gmail.com</option>
+                            <option value="naver.com">naver.com</option>
+                            <option value="daum.net">daum.net</option>
+                        </select>
+                    </div>
                 </li>
-
-                <!-- 작성자명, 비밀번호, 비밀번호 확인, 연락처 -->
+                <!-- 이메일형식2 -->
+                <label for=""><span class="required_input">*</span>이메일</label>
+                <input type="email" id="email-id" placeholder="이메일을 입력해주세요." required class="w100p"
+                    pattern="^[A-Za-z0-9!#%^&*_-]+@[A-Za-z0-9_-]+(\.[A-Za-z0-9_-]+){1,2}">
+                <!-- 작성자명  -->
                 <li>
                     <label for=""><span class="required_input">*</span>작성자명</label>
                     <input type="text" placeholder="이름을 입력해주세요." required class="w100p">
                 </li>
+
+                <!-- 비밀번호 -->
                 <li>
                     <label for=""><span class="required_input">*</span>비밀번호</label>
                     <input type="password" placeholder="비밀번호를 입력해주세요." required class="w100p">
 
                 </li>
+
+                <!-- 비밀번호 확인 -->
                 <li>
                     <label for=""><span class="required_input">*</span>비밀번호 확인</label>
                     <input type="password" placeholder="비밀번호를 다시 입력해주세요." required class="w100p">
 
                 </li>
+
+                <!-- 연락처 -->
                 <li>
                     <label for=""><span class="required_input">*</span>연락처</label>
-                    <input type="tel" placeholder="'-' 없이 숫자만 입력해주세요." required class="w100p">
-
+                    <input type="tel" placeholder="'-' 없이 숫자만 입력해주세요." required class="w100p" pattern="^01[0-9]{8,9}$">
                 </li>
+
+                <!-- 주소 -->
+
+                <li id="addr">
+                    <label for=""><span class="required_input">*</span>주소</label>
+                    <input type="text" id="postcode" placeholder="우편번호" readonly>
+                    <button onclick="execDaumPostcode()">주소 검색</button>
+                    <input type="text" id="address" placeholder="주소" readonly>
+                    <input type="text" id="detailAddress" placeholder="상세주소 입력">
+                </li>
+
 
                 <!-- 라디오버튼 -->
                 <li>
-                    <label for=""><span class="required_input">*</span>성별</label>
+                    <label for="" class="pl16">성별</label>
                     <input type="radio" name="gender" id="man">
                     <label for="man" class="gender">남</label>
                     <input type="radio" name="gender" id="woman">
@@ -114,20 +143,22 @@
 
                 <!-- 확인란(체크박스) -->
                 <li>
-                    <label for=""><span class="required_input">*</span>개인정보 활용동의</label>
+                    <label for="" class="pl16">개인정보 활용동의</label>
                     <input type="checkbox" id="agree">
                     <label for="argee">동의함</label>
                 </li>
 
                 <!-- textarea -->
                 <li>
-                    <label for="inquiry_detail">문의내용</label>
-                    <textarea class="w100p" name="inquiry_detail" id="inquiry_detail" placeholder="간단한 상담 요청 사항을 남겨주시면 보다 상세한 상담이 가능합니다. 전화 상담 희망시 기재 부탁드립니다."></textarea>
+                    <label for="inquiry_detail" class="pl16 lbl_inquiry_detail">문의내용</label>
+                    <textarea class="w100p" name="inquiry_detail" id="inquiry_detail"
+                        placeholder="간단한 상담 요청 사항을 남겨주시면 보다 상세한 상담이 가능합니다. 전화 상담 희망시 기재 부탁드립니다."></textarea>
                 </li>
             </ul>
+        </form>
 
-            <!-- 등록버튼 -->
-            <div class="register_btn"><button>등록</button></div>
+        <!-- 등록버튼 -->
+        <div class="register_btn"><button type="submit">등록</button></div>
         </form>
     </div>
 
