--- a/70_pf/jeep/header.html
+++ b/70_pf/jeep/header.html
@@ -15,9 +15,19 @@
             <ul class="main">
                 <li><a href="#">모델소개</a></li>
                 <li><a href="#">구입문의</a></li>
-                <li><a href="#"><img src="/w0310/70_pf/jeep/images/logo_w.png" alt="로고"></a></li>
+                <li>
+                    <div class="logo_container">
+                        <a href="#"><img src="/w0310/70_pf/jeep/images/logo_w.png" alt="기본 로고" class="logo default"></a>
+                        <a href="#"><img src="/w0310/70_pf/jeep/images/logo.png" alt="호버 로고" class="logo hover"></a>
+                    </div>
+                </li>
                 <li><a href="#">고객지원</a></li>
-                <li><a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="jeepwave"></a></li>
+                <li>
+                    <div class="logo_container_2">
+                        <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="기본 로고" class="logo2 default"></a>
+                        <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave.png" alt="호버 로고" class="logo2 hover"></a>
+                    </div>
+                </li>
             </ul>
         </nav>
     </header>
