--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
-    <title>JEEP</title>
+    <title>Jeep</title>
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/index.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/w0310/70_pf/jeep/script/index.js"></script>
 </head>
+
 <body>
-    
+    <header class="header">
+        <nav>
+            <ul class="main">
+                <li><a href="#">모델소개</a></li>
+                <li><a href="#">구입문의</a></li>
+                <li>
+                    <div class="logo_container">
+                        <a href="#"><img src="/w0310/70_pf/jeep/images/logo_w.png" alt="기본 로고" class="logo default"></a>
+                        <a href="#"><img src="/w0310/70_pf/jeep/images/logo.png" alt="호버 로고" class="logo hover"></a>
+                    </div>
+                </li>
+                <li><a href="#">고객지원</a></li>
+                <li>
+                    <div class="logo_container_2">
+                        <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="기본 로고" class="logo2 default"></a>
+                        <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave.png" alt="호버 로고" class="logo2 hover"></a>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <div class="container">
+        <div class="section">Section 1</div>
+        <div class="section">Section 2</div>
+        <div class="section">Section 3</div>
+        <div class="section">Section 4</div>
+    </div>
+    <footer class="footer">Footer Area</footer>
+
+
 </body>
+
 </html>
