--- a/05_html+cs+js/3-8/3-8-05_navigator객체.html
+++ b/05_html+cs+js/3-8/3-8-05_navigator객체.html
@@ -14,6 +14,9 @@
 <body>
     <h1>장치 구분하기</h1>
     <p id="useragent_info"></p>
+    <ul>
+        <li>아이폰14pro: Mozilla/5.0 (iPhone; CPU iPhone OS 18_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/18.5 Mobile/15E148 Safari/604.1</li>
+    </ul>
     <script>
 
         /*
