--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
     </ul>
 
     <script>
-        const browser = navigator.userAgent;
-        const useragent_info = document.getElementById('useragent_info');
-        const small_text = browser.toLowerCase();
-
-        if (small_text.includes('windows')) {
-            location.href = "desktop.html";
-        } else {
-            location.href = "mobile.html";
+        function isMobile() {
+            return /Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
         }
+
+        if (isMobile()) {
+            location.href = "mobile.html";
+        } else {
+            location.href = "desktop.html";
+        }
+
     </script>
 
 </body>
