--- a/useragent.html
+++ b/useragent.html
@@ -22,43 +22,18 @@
     </ul>
     <script>
 
-        /*
-            navigator 객체
-                브라우저 버전이나 브라우저명 등
-                브라우저 정보에 관한 객체
 
-            속성
-                appCodeName
-                    브라우저의 코드명 반환
-                appName
-                    브라우저명 반환
-                appVersion
-                    브라우저 버전 반환
-                platForm
-                    플랫폼명 반환
-                userAgent
-                    브라우저의 코드명과 버전 반환
-        */
-
-        const browser = navigator.userAgent;
-        console.log(browser);
-        // Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36
-        // 브라우저, 운영체제 정보
-
-        // jq
-        // const useragent_info = $('#useragent_info');
-        // useragent_info.text(browser);
-
-        // js
-        const useragent_info = document.getElementById('useragent_info');
-        const small_text = browser.toLowerCase();
-
-        if (small_text.includes('windows')) {
-            useragent_info.textContent = "출력";
-            location.href = "desktop.html";
-        } else {
-            location.href = "mobile.html";
+            function isMobile() {
+            return /Mobi|Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
         }
+
+            if (isMobile()) {
+                location.href = "mobile.html";
+        } else {
+                location.href = "desktop.html";
+        }
+
+
 
     </script>
 
