--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -14,25 +14,43 @@
 
 <body>
     <header class="header">
-        <nav>
-            <ul class="main">
-                <li><a href="#">모델소개</a></li>
-                <li><a href="#">구입문의</a></li>
-                <li>
-                    <div class="logo_container">
-                        <a href="#"><img src="/w0310/70_pf/jeep/images/logo_w.png" alt="기본 로고" class="logo default"></a>
-                        <a href="#"><img src="/w0310/70_pf/jeep/images/logo.png" alt="호버 로고" class="logo hover"></a>
-                    </div>
-                </li>
-                <li><a href="#">고객지원</a></li>
-                <li>
-                    <div class="logo_container_2">
-                        <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="기본 로고" class="logo2 default"></a>
-                        <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave.png" alt="호버 로고" class="logo2 hover"></a>
-                    </div>
-                </li>
-            </ul>
-        </nav>
+        <div class="nav_container">
+            <nav>
+                <ul class="main">
+                    <li><a href="#">모델소개</a>
+                    <ul class="sub">
+                        <li>
+                            <div class="model_1">
+                                <div class="model_container">
+                                    <div class="img">
+                                        <img src="/w0310/70_pf/jeep/images/sub/model_1.png" alt="">
+                                    </div>
+                                    <div class="model_txt">
+                                        <div class="model_uptxt"></div>
+                                        <div class="model_downtxt"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    </li>
+                    <li><a href="#">구입문의</a></li>
+                    <li>
+                        <div class="logo_container">
+                            <a href="#"><img src="/w0310/70_pf/jeep/images/logo_w.png" alt="기본 로고" class="logo default"></a>
+                            <a href="#"><img src="/w0310/70_pf/jeep/images/logo.png" alt="호버 로고" class="logo hover"></a>
+                        </div>
+                    </li>
+                    <li><a href="#">고객지원</a></li>
+                    <li>
+                        <div class="logo_container_2">
+                            <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="기본 로고" class="logo2 default"></a>
+                            <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave.png" alt="호버 로고" class="logo2 hover"></a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <div class="container">
         <div class="section">Section 1</div>
