--- a/05_html+cs+js/3-9/3-9-02_요소의속성추가제거.html
+++ b/05_html+cs+js/3-9/3-9-02_요소의속성추가제거.html
@@ -7,7 +7,7 @@
     <title>요소생성삭제</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <style>
-        div {
+        .div {
             position: fixed;
             left: 100px;
             top: 10px;
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <button id="bt">요소 생성</button>
+    <div>요소의 속성 class 추가</div>
 
     <script>
         /* 
@@ -33,31 +33,6 @@
                 removeAttribute()
                     요소의 속성을 제거한다.
         */
-
-        function createEle() {
-            const bt = document.getElementById('bt');
-            
-            function popup() {
-                // DOM 객체 생성
-                const div = document.createElement('div');
-                const a = document.createElement('a');
-                const txt = document.createTextNode('개인사이트');
-                
-                //객체 추가
-                a.appendChild(txt);
-                div.appendChild(a);
-                document.body.appendChild(div);
-
-                // 속성 추가
-                a.setAttribute('href','http://ooongi.github.io/w0310');
-            }
-
-            //이벤트
-            bt.onclick = popup;
-        }
-
-        // 문서가 열릴 때 버튼 클릭하면 아이콕스 초록색 박스가 생성
-        addEventListener('load', createEle);
 
     </script>
 
