--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -16,9 +16,10 @@
     <header class="header">
         <div class="nav_container">
             <nav>
+                <div class="nav_bg"></div>
                 <ul class="main">
                     <li><a href="#">모델소개</a>
-                    <ul class="sub">
+                    <ul class="sub_1">
                         <li>
                             <div class="model_1">
                                 <div class="model_container">
