--- a/05_html+cs+js/3-9/3-9-02_요소의속성추가제거.html
+++ b/05_html+cs+js/3-9/3-9-02_요소의속성추가제거.html
@@ -4,36 +4,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>요소생성삭제</title>
+    <title>요소의속성추가제거</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <style>
         .div {
-            position: fixed;
-            left: 100px;
-            top: 10px;
+            position: absolute;
+            top: 100px;
+            left: -170px;
             width: 200px;
             height: 200px;
             background: #718c00;
+            transition: .3s;
         }
+
+        .active {
+            left: 0;
+        }
+
+        /* .div:hover {
+            left: 0;
+        } */
     </style>
 </head>
 
 <body>
-    <div>요소의 속성 class 추가</div>
-
+    <button id="bt0">HTML속성 set</button>
+    <button id="bt1">HTML속성 get</button>
+    <button id="bt2">HTML속성 remove</button>
+    <div class="div">
+        <a>웹사이트로 이동하기</a>
+    </div>
     <script>
         /* 
             DOM 요소 속성 추가/삭제
 
             메서드
-                getAttribute()
+                getAttribute('속성')
+                attr('속성')
                     요소의 속성 값을 가져온다.
-                setAttribute()
-                    요소의 속성을 설정한다.
-                removeAttribute()
+
+                setAttribute('속성', '값')
+                attr({
+                    속성: '값',
+                    속성: '값',
+                    ...
+                });
+                    요소의 속성을 설정한다.(속성 추가)
+
+                removeAttribute('속성')
+                removeAttr('속성')
                     요소의 속성을 제거한다.
+
+            dom 객체 선택
+                document,getElementById('아이디')
         */
 
+        // document.getElementById 안쓰고 dom객체선택
+        /* const bt0 = document.querySelectorAll('button')[0];
+        const bt1 = document.querySelectorAll('button')[1];
+        const bt2 = document.querySelectorAll('button')[2];
+        const div = document.querySelector('div');
+        const a = document.querySelector('a');
+
+        // 이벤트
+
+        // 자바스크립트(바닐라)
+        bt0.onclick = () => {
+            div.setAttribute('class', 'div active');
+            a.setAttribute('href', 'https://ooongi.github.io/w0310');
+            a.setAttribute('target', '_blank');
+            a.setAttribute('title', '클릭하면 나의 개인사이트로 이동합니다.');
+        };
+        bt1.onclick = () => {
+            const result = div.getAttribute('class');
+            console.log(result);
+        };
+        bt2.onclick = () => {
+            div.removeAttribute('class');
+            div.setAttribute('class', 'div');
+
+        }; */
+
+
+        // 제이쿼리
+        const bt0 = $('button').eq(0);
+        const bt1 = $('button').eq(1);
+        const bt2 = $('button').eq(2);
+        const div = $('div');
+        const a = $('a');
+
+        bt0.click(() => {
+            div.attr('class', 'div active');
+            a.attr({
+                href: 'https://ooongi.github.io/w0310',
+                target : '_blank',
+                title : '클릭하면 포트폴리오를 확인할 수 있습니다.'
+            });
+        });
+        bt1.click(() => {
+            const result = div.attr('class');
+            console.log(result);
+        });
+        bt2.click(() => {
+            div.removeAttr('class');
+            div.attr('class', 'div');
+        });
     </script>
 
 </body>
