--- a/07_bs5/02_레이아웃.html
+++ b/07_bs5/02_레이아웃.html
@@ -48,12 +48,20 @@
         CSS 그리드
     -->
         <!-- .container의 크기: 1320 = 1296 + p24 -->
-    <div class="container">
+    <div class="container my-5">
         <div class="row">
-            <div class="col-sm-6 col-md-3 bg-primary-subtle">1</div>
-            <div class="col-sm-6 col-md-3 bg-warning-subtle">2</div>
-            <div class="col-sm-6 col-md-3 bg-success-subtle">3</div>
-            <div class="col-sm-6 col-md-3 bg-secondary-subtle">4</div>
+            <div class="col bg-primary">3</div>
+            <div class="col bg-warning">3</div>
+            <div class="col bg-success">3</div>
+            <div class="col bg-secondary">3</div>
+        </div>
+    </div>
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-sm-2 bg-primary-subtle">2</div>
+            <div class="col-sm-4 bg-warning-subtle">4</div>
+            <div class="col-sm-4 bg-success-subtle">4</div>
+            <div class="col-sm-2 bg-secondary-subtle">2</div>
         </div>
     </div>
 </body>
