--- a/06_jq/01_제이쿼리연결방법.html
+++ b/06_jq/01_제이쿼리연결방법.html
@@ -8,6 +8,8 @@
     <script src="jquery-3.7.1.min.js"></script>
     <script src="jquery-3.7.1.js"></script>
     <!-- CDN -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
 </head>
 <body>
     
