--- a/06_jq/01_제이쿼리연결방법.html
+++ b/06_jq/01_제이쿼리연결방법.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>제이쿼리연결방법</title>
     <!-- 다운로드 방식 -->
-    <!-- <script src="jquery-3.7.1.min.js"></script>
-    <script src="jquery-3.7.1.js"></script> -->
+    <!-- <script src="jquery-3.7.1.min.js"></script> -->
+    <!-- <script src="jquery-3.7.1.js"></script> -->
     <!-- CDN -->
-    <!-- <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script> -->
-    <script src="https://ooongi.github.io/w0310/06_jq/jquery-3.7.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <!-- <script src="https://ooongi.github.io/w0310/06_jq/jquery-3.7.1.min.js"></script> -->
 
 </head>
 <body>
